--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "lodash": "^4.17.10",
     "minapp-api-promise": "^1.0.2",
-    "mpvue": "^1.0.11",
+    "mpvue": "1.0.11",
     "mpvue-wxparse": "^0.6.5",
     "vuex": "^3.0.1"
   },
@@ -28,6 +28,7 @@
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
+    "dayjs": "^1.11.13",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -36,8 +37,8 @@
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
-    "mpvue-loader": "^1.1.2",
-    "mpvue-template-compiler": "^1.0.11",
+    "mpvue-loader": "1.1.2",
+    "mpvue-template-compiler": "1.0.11",
     "mpvue-webpack-target": "^1.0.0",
     "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
